# xlsgen

./: README.md  load_tables.py  pyproject.toml  table.py  table.txt
templates/: identitas_siswa.json  identitas_siswa.xml
xlsgen/: models.py
