[tool.poetry]
name = "xlsgen"
version = "0.1.0"
description = "excel file generator"
authors = ["Fathin Luqman Tantowi <fltfathin@gmail.com>"]
license = "GPL-2.0-only"

[tool.poetry.dependencies]
python = "^3.6"
xlsxwriter = "^1.3.7"
toml = "^0.10.2"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
